--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,28 @@
 <html>
   <head>
     <title>Meadowlark Travel Site</title>
+    {{#if showTests}}
+      <link rel="stylesheet" href="/vendor/mocha.css">
+      <script src="/vendor/jquery-3.1.0.js"></script>
+    {{/if}}      
   </head>
 <body>
   <header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
   {{{body}}}
+
+  {{#if showTests}}
+      <div id="mocha"></div>
+      <script src="/vendor/mocha.js"></script>      
+      <script src="/vendor/chai.js"></script>
+      <script>
+        mocha.ui('tdd');
+        let assert = chai.assert;
+      </script>
+      <script src="/qa/tests-global.js"></script>
+      {{#if pageTestScript}}
+        <script src="{{pageTestScript}}"></script>
+      {{/if}}
+      <script>mocha.run();</script>
+  {{/if}}      
 </body>
 </html>
