Added sections to templates

--- a/views/tours/request-group-rate.handlebars
+++ b/views/tours/request-group-rate.handlebars
@@ -1,5 +1,5 @@
 <h1>Request Group Rate</h1>
-<form>
+<form action="/tours/process-group-rate" method="POST">
 	<input type="hidden" name="referrer">
 	Name: <input type="text" id="fieldName" name="name"><br>
 	Group size: <input type="text" name="groupSize"><br>
