--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,15 @@
     <title>Meadowlark Travel Site</title>
     {{#if showTests}}
       <link rel="stylesheet" href="/vendor/mocha.css">
-      <script src="/vendor/jquery-3.1.0.js"></script>
-    {{/if}}      
+    {{/if}}
+    {{{_sections.head}}}      
   </head>
 <body>
   <header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
   {{{body}}}
+  
+  <script src="/vendor/jquery-3.1.0.js"></script>
+  {{{_sections.jquery}}}
 
   {{#if showTests}}
       <div id="mocha"></div>
@@ -24,6 +27,6 @@
         <script src="{{pageTestScript}}"></script>
       {{/if}}
       <script>mocha.run();</script>
-  {{/if}}      
+  {{/if}}
 </body>
 </html>
