--- a/views/nursery-rhyme.handlebars
+++ b/views/nursery-rhyme.handlebars
@@ -1,7 +1,7 @@
 {{#section 'head'}}
-  <script src="/vendor/handlebars-v4.0.5.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
 
-  <script id="nurseryRhymeTemplate" type="text/x-handlebars-template">
+	<script id="nurseryRhymeTemplate" type="text/x-handlebars-template">
 		Marry had a little <b>\{{animal}}</b>, its <b>\{{bodyPart}}</b>
 		was <b>\{{adjective}}</b> as <b>\{{noun}}</b>.
 	</script>
@@ -13,13 +13,14 @@
 <button id="btnNurseryRhymeAjax">Generate nursery rhyme from AJAX</button>
 
 {{#section 'jquery'}}
-  <script>
+	<script>
 		$(document).ready(function(){
-      
-			let nurseryRhymeTemplate = Handlebars.compile(
+
+			var nurseryRhymeTemplate = Handlebars.compile(
 				$('#nurseryRhymeTemplate').html());
-			let $nurseryRhyme = $('#nurseryRhyme');
-      
+
+			var $nurseryRhyme = $('#nurseryRhyme');
+
 			$('#btnNurseryRhyme').on('click', function(evt){
 				evt.preventDefault();
 				$nurseryRhyme.html(nurseryRhymeTemplate({
@@ -38,7 +39,7 @@
 					}
 				});
 			});
-		});	
-  </script>  
-{{/section}}
 
+		});	
+	</script>
+{{/section}}
