--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -14,7 +14,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		{{#each cart}}
+		{{#each cart.items}}
 			<tr>
 				<td>{{product.name}}</td>
 				<td>{{guests}}</td>
@@ -22,3 +22,5 @@
 		{{/each}}
 	</tbody>
 </table>
+
+<a class="btn btn-primary" href="/cart/checkout">Checkout</a>
