--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,8 +4,14 @@
    Author's custom styles
    ========================================================================== */
 
+a.currency {
+  text-decoration: none;
+}
 
-
+.currency.selected {
+  font-weight: bold;
+  font-size: 150%;
+}
 
 
 
