Updated code to organize routes and sync with book

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -16,7 +16,7 @@
 	<tbody>
 		{{#each cart.items}}
 			<tr>
-				<td>{{product.name}}</td>
+				<td>{{vacation.name}}</td>
 				<td>{{guests}}</td>
 			</tr>
 		{{/each}}
