--- a/views/vacations.handlebars
+++ b/views/vacations.handlebars
@@ -1,7 +1,7 @@
 <h1>Vacations</h1>
 {{#each vacations}}
     <div class="vacation">
-        <h3>{{name}}</h3>
+        <h3><a href="/vacation/{{slug}}">{{name}}</a></h3>
         <p>{{description}}</p>
         {{#if inSeason}}
             <span class="price">{{price}}</span> 
