--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
             }
         </style>
         <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="{{static '/css/main.css'}}">
 
         <script src="/vendor/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -31,7 +31,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-		<header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
+		<header><img src="{{static '/img/logo.png'}}" alt="Meadowlark Travel Logo"></header>
 
 	    <div class="container">
 			{{#if flash}}
