Added more handling of static content via server-side JS

--- a/less/main.less
+++ b/less/main.less
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 body {
-  background-image: url("/img/background.png");
+  background-image: static("/img/background.png");
 }
 
 a.currency {
