--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-		<header><img src="{{static '/img/logo.png'}}" alt="Meadowlark Travel Logo"></header>
+		<header><img src="{{logoImage}}" alt="Meadowlark Travel Logo"></header>
 
 	    <div class="container">
 			{{#if flash}}
@@ -53,7 +53,33 @@
 
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         <script>window.jQuery || document.write('<script src="/vendor/js/jquery-2.1.1.min.js"><\/script>')</script>
-    	{{{_sections.jquery}}}
+    	
+		<script>
+			var IMG_CART_EMPTY = '{{static '/img/shop/cart_empty.png'}}';
+			var IMG_CART_FULL = '{{static '/img/shop/cart_full.png'}}';
+			// simple client-side cart implementation (mostly mocked for now)
+			var cart = (function() {
+				// normally we would get this from an AJAX call, or some similar method
+				var items = Array({{cartItems}});
+				return {
+					items: items,
+					isEmpty: function() {
+						return !items.length;
+					},
+					addItem: function(id) {
+						items.push(id);
+						$(document).trigger('meadowlark_cart_changed');
+					}
+				};
+			})();
+			// change cart icon when the cart has changed
+			$(document).on('meadowlark_cart_changed', function(){
+				$('header img.cartIcon').attr('src', cart.isEmpty() ?
+				IMG_CART_EMPTY : IMG_CART_FULL );
+			});
+		</script>		
+		
+		{{{_sections.jquery}}}
 
 		{{#if showTests}}
 			<div id="mocha"></div>
