Added support for injecting bundles of files in development using connect-bundle

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,9 @@
             }
         </style>
         <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{{static '/css/main.css'}}">
+		{{#each _bundles.css}}
+        	<link rel="stylesheet" href="{{static .}}">
+		{{/each}}
 
         <script src="/vendor/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -97,6 +99,11 @@
 		{{/if}}
 
         <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-        <script src="/js/main.js"></script>
+		{{#each _bundles.js.beforeBodyClose}}
+        	<script src="{{static .}}"></script>
+		{{/each}}
+
+
+        
     </body>
 </html>
